Dependency management update
- including dependencies to pom.xml files only where they are used,
avoiding extra dependencies being added in all packages.

Issue-ID: POLICY-4945
