# policy-management/src/main/java/org/onap/policy/drools/server/restful/RestManager.java
@@ -1392,7 +1392,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @GET
-    @Path("engine/topics/sources/{comm: ueb|kafka|noop}")
+    @Path("engine/topics/sources/{comm: kafka|noop}")
     public Response commSources(
         @PathParam("comm") String comm) {
         if (!checkValidNameInput(comm)) {
@@ -1405,9 +1405,6 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
         List<TopicSource> sources = new ArrayList<>();
         var status = Status.OK;
         switch (CommInfrastructure.valueOf(comm.toUpperCase())) {
-            case UEB:
-                sources.addAll(TopicEndpointManager.getManager().getUebTopicSources());
-                break;
             case NOOP:
                 sources.addAll(TopicEndpointManager.getManager().getNoopTopicSources());
                 break;
@@ -1427,7 +1424,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @GET
-    @Path("engine/topics/sinks/{comm: ueb|kafka|noop}")
+    @Path("engine/topics/sinks/{comm: kafka|noop}")
     public Response commSinks(
         @PathParam("comm") String comm) {
         if (!checkValidNameInput(comm)) {
@@ -1440,9 +1437,6 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
         List<TopicSink> sinks = new ArrayList<>();
         var status = Status.OK;
         switch (CommInfrastructure.valueOf(comm.toUpperCase())) {
-            case UEB:
-                sinks.addAll(TopicEndpointManager.getManager().getUebTopicSinks());
-                break;
             case NOOP:
                 sinks.addAll(TopicEndpointManager.getManager().getNoopTopicSinks());
                 break;
@@ -1462,7 +1456,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @GET
-    @Path("engine/topics/sources/{comm: ueb|kafka|noop}/{topic}")
+    @Path("engine/topics/sources/{comm: kafka|noop}/{topic}")
     public Response sourceTopic(
         @PathParam("comm") String comm,
         @PathParam("topic") String topic) {
@@ -1478,7 +1472,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @GET
-    @Path("engine/topics/sinks/{comm: ueb|kafka|noop}/{topic}")
+    @Path("engine/topics/sinks/{comm: kafka|noop}/{topic}")
     public Response sinkTopic(
         @PathParam("comm") String comm,
         @PathParam("topic") String topic) {
@@ -1494,7 +1488,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @GET
-    @Path("engine/topics/sources/{comm: ueb|kafka|noop}/{topic}/events")
+    @Path("engine/topics/sources/{comm: kafka|noop}/{topic}/events")
     public Response sourceEvents(
         @PathParam("comm") String comm,
         @PathParam("topic") String topic) {
@@ -1510,7 +1504,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @GET
-    @Path("engine/topics/sinks/{comm: ueb|kafka|noop}/{topic}/events")
+    @Path("engine/topics/sinks/{comm: kafka|noop}/{topic}/events")
     public Response sinkEvents(
         @PathParam("comm") String comm,
         @PathParam("topic") String topic) {
@@ -1526,7 +1520,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @GET
-    @Path("engine/topics/sources/{comm: ueb|kafka|noop}/{topic}/switches")
+    @Path("engine/topics/sources/{comm: kafka|noop}/{topic}/switches")
     public Response commSourceTopicSwitches(
         @PathParam("comm") String comm,
         @PathParam("topic") String topic) {
@@ -1538,7 +1532,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @GET
-    @Path("engine/topics/sinks/{comm: ueb|kafka|noop}/{topic}/switches")
+    @Path("engine/topics/sinks/{comm: kafka|noop}/{topic}/switches")
     public Response commSinkTopicSwitches(
         @PathParam("comm") String comm,
         @PathParam("topic") String topic) {
@@ -1550,7 +1544,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @PUT
-    @Path("engine/topics/sources/{comm: ueb|kafka|noop}/{topic}/switches/lock")
+    @Path("engine/topics/sources/{comm: kafka|noop}/{topic}/switches/lock")
     public Response commSourceTopicLock(
         @PathParam("comm") String comm,
         @PathParam("topic") String topic) {
@@ -1564,7 +1558,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @DELETE
-    @Path("engine/topics/sources/{comm: ueb|kafka|noop}/{topic}/switches/lock")
+    @Path("engine/topics/sources/{comm: kafka|noop}/{topic}/switches/lock")
     public Response commSourceTopicUnlock(
         @PathParam("comm") String comm,
         @PathParam("topic") String topic) {
@@ -1578,7 +1572,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @PUT
-    @Path("engine/topics/sources/{comm: ueb|kafka|noop}/{topic}/switches/activation")
+    @Path("engine/topics/sources/{comm: kafka|noop}/{topic}/switches/activation")
     public Response commSourceTopicActivation(
         @PathParam("comm") String comm,
         @PathParam("topic") String topic) {
@@ -1592,7 +1586,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @DELETE
-    @Path("engine/topics/sources/{comm: ueb|kafka|noop}/{topic}/switches/activation")
+    @Path("engine/topics/sources/{comm: kafka|noop}/{topic}/switches/activation")
     public Response commSourceTopicDeactivation(
         @PathParam("comm") String comm,
         @PathParam("topic") String topic) {
@@ -1606,7 +1600,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @PUT
-    @Path("engine/topics/sinks/{comm: ueb|kafka|noop}/{topic}/switches/lock")
+    @Path("engine/topics/sinks/{comm: kafka|noop}/{topic}/switches/lock")
     public Response commSinkTopicLock(
         @PathParam("comm") String comm,
         @PathParam("topic") String topic) {
@@ -1620,7 +1614,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @DELETE
-    @Path("engine/topics/sinks/{comm: ueb|kafka|noop}/{topic}/switches/lock")
+    @Path("engine/topics/sinks/{comm: kafka|noop}/{topic}/switches/lock")
     public Response commSinkTopicUnlock(
         @PathParam("comm") String comm,
         @PathParam("topic") String topic) {
@@ -1634,7 +1628,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @PUT
-    @Path("engine/topics/sinks/{comm: ueb|kafka|noop}/{topic}/switches/activation")
+    @Path("engine/topics/sinks/{comm: kafka|noop}/{topic}/switches/activation")
     public Response commSinkTopicActivation(
         @PathParam("comm") String comm,
         @PathParam("topic") String topic) {
@@ -1648,7 +1642,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @DELETE
-    @Path("engine/topics/sinks/{comm: ueb|kafka|noop}/{topic}/switches/activation")
+    @Path("engine/topics/sinks/{comm: kafka|noop}/{topic}/switches/activation")
     public Response commSinkTopicDeactivation(
         @PathParam("comm") String comm,
         @PathParam("topic") String topic) {
@@ -1676,7 +1670,7 @@ public class RestManager implements SwaggerApi, DefaultApi, FeaturesApi, InputsA
      */
     @Override
     @PUT
-    @Path("engine/topics/sources/{comm: ueb|kafka|noop}/{topic}/events")
+    @Path("engine/topics/sources/{comm: kafka|noop}/{topic}/events")
     @Consumes(MediaType.TEXT_PLAIN)
     public Response commEventOffer(
         @PathParam("comm") String comm,
