# policy-management/src/main/java/org/onap/policy/drools/system/Main.java
@@ -3,6 +3,7 @@
  * ONAP
  * ================================================================================
  * Copyright (C) 2017-2021 AT&T Intellectual Property. All rights reserved.
+ * Modifications Copyright (C) 2024 Nordix Foundation.
  * ================================================================================
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -124,7 +125,7 @@ public class Main {
         try {
             engineProperties = SystemPersistenceConstants.getManager().getEngineProperties();
         } catch (IllegalArgumentException iae) {
-            logger.warn("Main: engine properties not found.  Using default configuration.", iae);
+            logger.warn("Main: engine properties not found. Using default configuration. {}", iae.getMessage());
             engineProperties = PolicyEngineConstants.getManager().defaultTelemetryConfig();
         }
 
